--- a/index.html
+++ b/index.html
@@ -39,15 +39,9 @@
           var url = 'https://gitee.com/dogstar/phalapi-wiki'
           var editHtml = '[文档不全或有误？我来更正 »](' + url + ')\n'
 
-          var adHtmlTop = '<div class="grid-wrapper desktop-only" style="">'
-              + '<br/><a href="http://pro.phalapi.net/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200307102230_9d3eab1f445d05aa8fe9cf9728f11bce.jpeg"></a>'
-            + '</div>';
-
-          var adHtml = '<div class="grid-wrapper desktop-only" style="">'
-            +  '<a href="https://www.yesapi.cn/?f=phalapi_docs" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20190802214814_bf526d27f086b7c39ca2c2be42d1c141.jpeg"></a>'
-//            + '<a href="http://www.ituring.com.cn/book/2664?f=docs.phalapi.net" target="blank"><img src="http://cdn7.okayapi.com/yesyesapi_20190403143113_e16fbb302216a6534bfea6e531b32e42.png" width="100%"></a>'
-            + '</div>';
-
+          var adHtmlTop = ''；
+          var adHtml = ''；
+          
 
           return "\n" + adHtmlTop + "\n\n" + html
             + '\n----\n'
