--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
    search: {
       maxAge: 86400000, // 过期时间，单位毫秒，默认一天
       paths: 'auto',
-      placeholder: '搜索',
-      noData: '没有记录！'
+      placeholder: 'Search',
+      noData: 'no result'
     }
 
 
