--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           var url = 'https://gitee.com/dogstar/phalapi-wiki'
           var editHtml = '[文档不全或有误？我来更正 »](' + url + ')\n'
 
-          var adHtmlTop = ''；
-          var adHtml = ''；
+          var adHtmlTop = '';
+          var adHtml = '';
           
 
           return "\n" + adHtmlTop + "\n\n" + html
