--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       function (hook, vm) {
         hook.beforeEach(function (html) {
           var url = 'https://gitee.com/dogstar/phalapi-wiki'
-          var editHtml = '[文档不全或有误？我来更正 »](' + url + ')\n'
+          var editHtml = '[Document issue? Correct it! »](' + url + ')\n'
 
           var adHtmlTop = '';
           var adHtml = '';
