--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     plugins: [
       function (hook, vm) {
         hook.beforeEach(function (html) {
-          var url = 'https://gitee.com/dogstar/phalapi-wiki'
+          var url = 'https://github.com/phalapi/phalapi-wiki'
           var editHtml = '[文档不全或有误？我来更正 »](' + url + ')\n'
 
           var adHtmlTop = '<div class="grid-wrapper desktop-only" style="">'
