--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           var editHtml = '[文档不全或有误？我来更正 »](' + url + ')\n'
 
           var adHtmlTop = '<div class="grid-wrapper desktop-only" style="">'
-              + '<br/><a href="http://pro.phalapi.net/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200307102230_9d3eab1f445d05aa8fe9cf9728f11bce.jpeg"></a>'
+              + '<br/><a href="http://pro.phalapi.net/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200406153527_ac074d11680c9e292a0cc7ae3068167b.png"></a>'
             + '</div>';
 
           var adHtml = '<div class="grid-wrapper desktop-only" style="">'
