--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           var editHtml = '[文档不全或有误？我来更正 »](' + url + ')\n'
 
           var adHtmlTop = '<div class="grid-wrapper desktop-only" style="">'
-              + '<br/><a href="http://pro.phalapi.net/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200415160654_1dff12fb6be2fcf63479983b63c81568.png"></a>'
+              + '<br/><a href="http://pro.phalapi.net/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200508000340_1f6bf8f60251ebff70fd5738503827a8.jpg" ></a>'
             + '</div>';
 
           var adHtml = '<div class="grid-wrapper desktop-only" style="">'
