--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           var adHtml = '<div class="grid-wrapper desktop-only" style="">'
             //+  '<a href="https://www.yesapi.cn/?f=phalapi_docs" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20190802214814_bf526d27f086b7c39ca2c2be42d1c141.jpeg"></a>'
-            +  '<a href="http://www.yesdev.cn/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200402171721_af098f509316ffe3ad88ae2d648101c6.png"></a>'
+            // +  '<a href="http://www.yesdev.cn/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200402171721_af098f509316ffe3ad88ae2d648101c6.png"></a>'
 //            + '<a href="http://www.ituring.com.cn/book/2664?f=docs.phalapi.net" target="blank"><img src="http://cdn7.okayapi.com/yesyesapi_20190403143113_e16fbb302216a6534bfea6e531b32e42.png" width="100%"></a>'
             + '</div>';
 
