--- a/v2.0/api-docs.html
+++ b/v2.0/api-docs.html
@@ -1117,7 +1117,7 @@ class User extends Api {
 <p>需要注意的是，注释必须是紧挨在类的前面，而不能是在namespace前面，否则会导致注释解析失败。  </p>
 <h2 id="_10"><a name="user-content-_10" href="#_10" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>通过在线接口文档进行测试</h2>
 <p>在线接口文档，不仅可以用来查看接口文档，包括接口参数、返回字段和功能说明外，还可以在上面进行接口测试。这将会直接请求当前的接口。效果如下：</p>
-<p><img alt="" src="http://cdn7.okayapi.com/yesyesapi_20190420153522_8629e92c261ad6a1f58f3e990994dce2.png" /></p>
+<p><img alt="" src="http://cd8.yesapi.net/yesyesapi_20190420153522_8629e92c261ad6a1f58f3e990994dce2.png" /></p>
 <h2 id="_11"><a name="user-content-_11" href="#_11" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>如何生成离线接口文档？</h2>
 <p>上面在线的接口文档，也可以一键生成离线版的HTML文档，方便传阅，离线查看。  </p>
 <p>当需要生成离线文档时，可以在终端，执行以下命令：  </p>
