--- a/v2.0/database-multi.html
+++ b/v2.0/database-multi.html
@@ -1154,7 +1154,7 @@ class Demo extends NotORM {
 </code></pre><br />
 通过传入不同的$id，即可获取相应的分表实例。  </p>
 <p>至此，整体的架构总结如下：</p>
-<p><img alt="" src="http://cdn7.okayapi.com/yesyesapi_20190420122044_1832a5d09987133f180d4464f11b7f25.jpeg" /></p>
+<p><img alt="" src="http://cd8.yesapi.net/yesyesapi_20190420122044_1832a5d09987133f180d4464f11b7f25.jpeg" /></p>
 <p>回顾前面学的知识点，获取NotORM实例有两种方式：</p>
 <ul>
 <li>全局获取方式</li>
@@ -1295,5 +1295,5 @@ $userLogCount = $log-&gt;count(88);
 </code></pre>
 
 <p>此时的整体架构图如下：</p>
-<p><img alt="" src="http://cdn7.okayapi.com/yesyesapi_20190420123932_fcfeeadf35b8b5cd63347888861a7fb4.jpeg" /></p>
+<p><img alt="" src="http://cd8.yesapi.net/yesyesapi_20190420123932_fcfeeadf35b8b5cd63347888861a7fb4.jpeg" /></p>
 <p>恭喜你！又学习了分库分表的新技能！</p></article></body></html>
