--- a/v2.0/database-notorm.html
+++ b/v2.0/database-notorm.html
@@ -1018,7 +1018,7 @@ body .markdown-body
 <p>这一章，主要讲解PhalApi主流的数据库使用方式。</p>
 <h2 id="phalapimodelnotorm"><a name="user-content-phalapimodelnotorm" href="#phalapimodelnotorm" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>PhalApi的Model和NotORM整体架构</h2>
 <p>首先，为避免混淆概念，我们先来看下PhalApi 2.x中的Model和NotORM整体架构。</p>
-<p><img alt="" src="http://cdn7.okayapi.com/yesyesapi_20190420101919_543639c3044d444b972f23c484885833.png" /></p>
+<p><img alt="" src="http://cd8.yesapi.net/yesyesapi_20190420101919_543639c3044d444b972f23c484885833.png" /></p>
 <p>当我们需要操作数据库时，主要分为三个步骤：连接数据库、实现数据库表操作、调用。</p>
 <ul>
 <li><strong> 第一步、连接数据库 </strong></li>
