--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             + '</div>';
 
           var adHtml = '<div class="grid-wrapper desktop-only" style="">'
-            + '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cdn7.okayapi.com/yesyesapi_20200812092646_a30901bc5c2547064a18ab7f7b0147b3.png" width="100%"></a>'
+            //+ '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cdn7.okayapi.com/yesyesapi_20200812092646_a30901bc5c2547064a18ab7f7b0147b3.png" width="100%"></a>'
+            + '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cdn7.okayapi.com/yesyesapi_20200908170619_87f89129b6f29b00dce093a4a4d45219.png" width="100%"></a>'
             // +  '<a href="http://www.yesdev.cn/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200402171721_af098f509316ffe3ad88ae2d648101c6.png"></a>'
 //            + '<a href="http://www.ituring.com.cn/book/2664?f=docs.phalapi.net" target="blank"><img src="http://cdn7.okayapi.com/yesyesapi_20190403143113_e16fbb302216a6534bfea6e531b32e42.png" width="100%"></a>'
             + '</div>';
