--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="index，PhalApi是一个PHP轻量级开源接口框架，致力于快速开 发接口服务。支持HTTP/SOAP/RPC等协议，可用于搭建接口/微服务/RESTful接口/Web Services。我们不断更新，保持生气；为接口负责，为开源负责！并承诺永久免费！">
   <meta name="keywords" content="PhalApi,phalapi,phalapi接口开发,后台接口开发,后台接口开发框架,接口开发,接口框架,开源接口框架,PHP后台接口开发,PHP接口开发,PHP接口框架,PHP后台接口框架,phalapi官网,PHP接口框架,php接口开发框架,php接口开发,php web框架,π框架,π开发框架,π接口框架,π接口开发框架,api接口,php接口,,PHP接口框架,phalapi文档,phalapi wiki,PhalApi文档,phalapi在线文档,phalapi官方文档">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="icon" href="http://cdn7.okayapi.com/yesyesapi_20190622221710_a8b7dc50a446b2fb281b6a956bb7f005.png" type="image/x-icon" />
+  <link rel="icon" href="http://cd8.yesapi.net/yesyesapi_20190622221710_a8b7dc50a446b2fb281b6a956bb7f005.png" type="image/x-icon" />
   <link rel="stylesheet" href="/static/vue.css">
     
 </head>
@@ -40,14 +40,14 @@
           var editHtml = '[文档不全或有误？我来更正 »](' + url + ')\n'
 
           var adHtmlTop = '<div class="grid-wrapper desktop-only" style="">'
-              + '<br/><a href="http://pro.yesapi.cn/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200721102423_9f81e4b108bd2b5c91597789ca8570bf.png"></a>'
+              + '<br/><a href="http://pro.yesapi.cn/" target="blank"><img width="100%"  src="http://cd8.yesapi.net/yesyesapi_20200721102423_9f81e4b108bd2b5c91597789ca8570bf.png"></a>'
             + '</div>';
 
           var adHtml = '<div class="grid-wrapper desktop-only" style="">'
-            //+ '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cdn7.okayapi.com/yesyesapi_20200812092646_a30901bc5c2547064a18ab7f7b0147b3.png" width="100%"></a>'
-            + '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cdn7.okayapi.com/yesyesapi_20200908170619_87f89129b6f29b00dce093a4a4d45219.png" width="100%"></a>'
-            // +  '<a href="http://www.yesdev.cn/" target="blank"><img width="100%"  src="http://cdn7.okayapi.com/yesyesapi_20200402171721_af098f509316ffe3ad88ae2d648101c6.png"></a>'
-//            + '<a href="http://www.ituring.com.cn/book/2664?f=docs.phalapi.net" target="blank"><img src="http://cdn7.okayapi.com/yesyesapi_20190403143113_e16fbb302216a6534bfea6e531b32e42.png" width="100%"></a>'
+            //+ '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cd8.yesapi.net/yesyesapi_20200812092646_a30901bc5c2547064a18ab7f7b0147b3.png" width="100%"></a>'
+            + '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cd8.yesapi.net/yesyesapi_20200908170619_87f89129b6f29b00dce093a4a4d45219.png" width="100%"></a>'
+            // +  '<a href="http://www.yesdev.cn/" target="blank"><img width="100%"  src="http://cd8.yesapi.net/yesyesapi_20200402171721_af098f509316ffe3ad88ae2d648101c6.png"></a>'
+//            + '<a href="http://www.ituring.com.cn/book/2664?f=docs.phalapi.net" target="blank"><img src="http://cd8.yesapi.net/yesyesapi_20190403143113_e16fbb302216a6534bfea6e531b32e42.png" width="100%"></a>'
             + '</div>';
 
 
