--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
           var editHtml = '[文档不全或有误？我来更正 »](' + url + ')\n'
 
           var adHtmlTop = '<div class="grid-wrapper desktop-only" style="">'
-              + '<br/><a href="http://pro.yesapi.cn/" target="blank"><img width="100%"  src="http://cd8.yesapi.net/yesyesapi_20200721102423_9f81e4b108bd2b5c91597789ca8570bf.png"></a>'
+              + '<br/><a href="http://pro.yesapi.cn/" target="blank"><img width="100%"  src="http://cd8.yesapi.net/yesyesapi_20201002215757_ca722749ea8df85f0417eea1b17d61a7.png"></a>'
+              //+ '<br/><a href="http://pro.yesapi.cn/" target="blank"><img width="100%"  src="http://cd8.yesapi.net/yesyesapi_20200721102423_9f81e4b108bd2b5c91597789ca8570bf.png"></a>'
             + '</div>';
 
           var adHtml = '<div class="grid-wrapper desktop-only" style="">'
             //+ '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cd8.yesapi.net/yesyesapi_20200812092646_a30901bc5c2547064a18ab7f7b0147b3.png" width="100%"></a>'
-            + '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cd8.yesapi.net/yesyesapi_20200908170619_87f89129b6f29b00dce093a4a4d45219.png" width="100%"></a>'
+            //+ '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cd8.yesapi.net/yesyesapi_20200908170619_87f89129b6f29b00dce093a4a4d45219.png" width="100%"></a>'
+            + '<a href="http://qiduoke.cn/?f=phalapi_docs" target="blank"><img src="http://cd8.yesapi.net/yesyesapi_20201002220128_48de0c6aa6c99d3c20e78e4dac10190b.png" width="100%"></a>'
             // +  '<a href="http://www.yesdev.cn/" target="blank"><img width="100%"  src="http://cd8.yesapi.net/yesyesapi_20200402171721_af098f509316ffe3ad88ae2d648101c6.png"></a>'
 //            + '<a href="http://www.ituring.com.cn/book/2664?f=docs.phalapi.net" target="blank"><img src="http://cd8.yesapi.net/yesyesapi_20190403143113_e16fbb302216a6534bfea6e531b32e42.png" width="100%"></a>'
             + '</div>';
