--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
 
 
   }
+
+    var _hmt = _hmt || [];
+    (function() {
+     var hm = document.createElement("script");
+     hm.src = "https://hm.baidu.com/hm.js?bbd0e84d1a1464f844d594adc1610100";
+     var s = document.getElementsByTagName("script")[0]; 
+     s.parentNode.insertBefore(hm, s);
+     })();
 </script>
 
 <!-- <script src="https://cdn.bootcss.com/docsify/4.6.10/docsify.min.js"></script> -->
