由 广州果创网络科技有限公司 长期维护升级

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>PhalApi 2.x 开发文档</title>
+  <title>PhalApi 2.x 开源接口框架 开发文档</title>
   <meta name="Author" content="PhalApi,ecitlm,dogstar">
   <meta name="renderer" content="webkit" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
@@ -21,7 +21,7 @@
 <script>
   window.$docsify = {
     themeColor: '#FBAB1B',
-    name: 'PhalApi 2.x 开发文档',
+    name: 'PhalApi 2.x 开源接口框架 开发文档',
     repo: 'https://github.com/phalapi/phalapi',
     auto2top: true,
     coverpage: true,
@@ -36,8 +36,8 @@
     plugins: [
       function (hook, vm) {
         hook.beforeEach(function (html) {
-          var url = 'https://github.com/phalapi/phalapi-wiki'
-          var editHtml = '[文档不全或有误？我来更正 »](' + url + ')\n'
+          var url = 'http://pro.yesapi.cn/'
+          var editHtml = '[由 广州果创网络科技有限公司 长期维护升级](' + url + ')\n'
 
           var adHtmlTop = '<div class="grid-wrapper desktop-only" style="">'
               + '<br/><a href="http://pro.yesapi.cn/" target="blank"><img width="100%"  src="http://cd8.yesapi.net/yesyesapi_20201002215757_ca722749ea8df85f0417eea1b17d61a7.png"></a>'
