--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="icon" href="http://cd8.yesapi.net/yesyesapi_20190622221710_a8b7dc50a446b2fb281b6a956bb7f005.png" type="image/x-icon" />
   <link rel="stylesheet" href="/static/vue.css">
+
+  <link rel="stylesheet" href="./themes/vue.css" />
     
 </head>
 
