PhalApiCurl扩展支持 put/delete/patch 请求方式，并且开放request接口，和修复post请求

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
   <link rel="stylesheet" href="./themes/vue.css" />
     
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4086960815369796"
+     crossorigin="anonymous"></script>
+
 </head>
 
 <body>
