--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>PhalApi 2.x 开源接口框架 开发文档</title>
+  <title>😍PhalApi 2.x 开源接口框架 开发文档</title>
   <meta name="Author" content="PhalApi,ecitlm,dogstar">
   <meta name="renderer" content="webkit" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
