--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="Author" content="PhalApi,ecitlm,dogstar">
   <meta name="renderer" content="webkit" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-  <meta name="description" content="index，PhalApi是一个PHP轻量级开源接口框架，致力于快速开 发接口服务。支持HTTP/SOAP/RPC等协议，可用于搭建接口/微服务/RESTful接口/Web Services。我们不断更新，保持生气；为接口负责，为开源负责！并承诺永久免费！">
+  <meta name="description" content="PhalApi 2.x 官方最新开发文档。">
   <meta name="keywords" content="PhalApi,phalapi,phalapi接口开发,后台接口开发,后台接口开发框架,接口开发,接口框架,开源接口框架,PHP后台接口开发,PHP接口开发,PHP接口框架,PHP后台接口框架,phalapi官网,PHP接口框架,php接口开发框架,php接口开发,php web框架,π框架,π开发框架,π接口框架,π接口开发框架,api接口,php接口,,PHP接口框架,phalapi文档,phalapi wiki,PhalApi文档,phalapi在线文档,phalapi官方文档">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="icon" href="http://cd8.yesapi.net/yesyesapi_20190622221710_a8b7dc50a446b2fb281b6a956bb7f005.png" type="image/x-icon" />
