文章目录备用，不过效果不好，会和左边目录重复，且样式上覆盖了阅读时间

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <link rel="stylesheet" href="./themes/vue.css" />
 
+  <!-- <link rel="stylesheet" href="https://cd7.okayapi.com/docsify-toc.css"> -->
+
 </head>
 
 <body>
@@ -81,6 +83,11 @@
        },
         isExpected: true
     },
+    //toc: {
+    //    scope: '.markdown-section',
+    //    headings: 'h1, h2, h3, h4, h5',
+    //    title: '目录',
+    //},
     pagination: {
         previousText: '上一章节',
         // or
@@ -122,6 +129,8 @@
 <script src="https://cd7.okayapi.com/countable.min.js"></script>
 <!-- 分页 -->
 <script src="https://cd7.okayapi.com/docsify-pagination.min.js"></script>
+<!-- 目录 -->
+<!--<script src="https://cd7.okayapi.com/docsify-toc.js"></script>-->
 
 <!--<script src="https://s19.cnzz.com/z_stat.php?id=1263006518&web_id=1263006518" language="JavaScript"></script>-->
 <!-- <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script> -->
