--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
         crossChapterText: true
     },
 
+    copyCode: {
+        buttonText: '复制',
+        errorText: '复制错误',
+        successText: '已复制~',
+    },
+
     search: {
        maxAge: 86400000, // 过期时间，单位毫秒，默认一天
        paths: 'auto',
@@ -131,6 +137,8 @@
 <script src="https://cd7.okayapi.com/docsify-pagination.min.js"></script>
 <!-- 目录 -->
 <!--<script src="https://cd7.okayapi.com/docsify-toc.js"></script>-->
+<!-- 复制代码 -->
+<script src="https://cd7.okayapi.com/docsify-copy-code.js"></script>
 
 <!--<script src="https://s19.cnzz.com/z_stat.php?id=1263006518&web_id=1263006518" language="JavaScript"></script>-->
 <!-- <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script> -->
