需求#631710 docsify-ads 定制你的广告

--- a/index.html
+++ b/index.html
@@ -105,6 +105,18 @@
         successText: '已复制~',
     },
 
+    // docsify ads 配置广告
+    ads: [
+       {
+          img: 'http://cd8.okayapi.com/yesyesapi_20231223141748_b45e125f701b464da3509a6d4063c4b3.png',
+          href: 'https://www.yesdev.cn/?f=phalapi'
+       },
+       {
+          img: 'http://cd8.okayapi.com/yesyesapi_20231223141934_263ed11397ddc476eb1a929076358b3c.png',
+          href: 'http://pro.yesapi.cn/?f=phalapi',
+       },
+    ],
+
     search: {
        maxAge: 86400000, // 过期时间，单位毫秒，默认一天
        paths: 'auto',
@@ -139,6 +151,8 @@
 <!--<script src="https://cd7.okayapi.com/docsify-toc.js"></script>-->
 <!-- 复制代码 -->
 <script src="https://cd7.okayapi.com/docsify-copy-code.js"></script>
+<!-- 广告 -->
+<script src="https://cd7.okayapi.com/docsify-ads.min.js"></script>
 
 <!--<script src="https://s19.cnzz.com/z_stat.php?id=1263006518&web_id=1263006518" language="JavaScript"></script>-->
 <!-- <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script> -->
