--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     search: {
        maxAge: 86400000, // 过期时间，单位毫秒，默认一天
        paths: 'auto',
-       placeholder: '搜索试试？',
+       placeholder: '搜索文档',
        noData: '没有记录！'
      }
 
