--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 
   <link rel="stylesheet" href="./themes/vue.css" />
 
+  <link rel="stylesheet" href="./static/docsify-dark-mode.style.min.css.css">
+
   <!-- <link rel="stylesheet" href="https://cd7.okayapi.com/docsify-toc.css"> -->
 
+  <style>
+    #main #dark_mode {
+        right: -58px !important;
+    }
+  </style>
 </head>
 
 <body>
@@ -117,6 +124,20 @@
        },
     ],
 
+    // 白天黑夜
+    darkMode: {
+      dark: {
+            background: "#1c2022",
+            toggleBtnBg: "#34495e",
+            textColor: "#b4b4b4"
+      },
+      light: {
+            background: "white",
+            toggleBtnBg: "var(--theme-color)",
+            textColor: "#34495e"
+       }
+    },
+
     search: {
        maxAge: 86400000, // 过期时间，单位毫秒，默认一天
        paths: 'auto',
@@ -153,6 +174,8 @@
 <script src="https://cd7.okayapi.com/docsify-copy-code.js"></script>
 <!-- 广告 -->
 <script src="https://cd7.okayapi.com/docsify-ads.min.js"></script>
+<!-- 黑夜 -->
+<script src="./static/docsify-dark-mode.index.min.js"></script>
 
 <!--<script src="https://s19.cnzz.com/z_stat.php?id=1263006518&web_id=1263006518" language="JavaScript"></script>-->
 <!-- <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script> -->
