--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             // + 'Last modified {docsify-updated} '
             + 'QQ群 459352221 '
             + editHtml
-            + ' © 2015-2023 PhalApi All Rights Reserved. 粤ICP备15028808号'
+            + ' © 2015-2025 PhalApi All Rights Reserved. 粤ICP备15028808号'
         })
       }
     ],
@@ -118,10 +118,10 @@
           img: 'http://cd8.okayapi.com/yesyesapi_20231223141748_b45e125f701b464da3509a6d4063c4b3.png',
           href: 'https://www.yesdev.cn/?f=phalapi'
        },
-       {
-          img: 'http://cd8.okayapi.com/yesyesapi_20231223141934_263ed11397ddc476eb1a929076358b3c.png',
-          href: 'http://pro.yesapi.cn/?f=phalapi',
-       },
+       //{
+       //   img: 'http://cd8.okayapi.com/yesyesapi_20231223141934_263ed11397ddc476eb1a929076358b3c.png',
+       //   href: 'http://pro.yesapi.cn/?f=phalapi',
+       //},
     ],
 
     // 白天黑夜
